[package]
name = "lab_16_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atk-sys = "0.17.0"
cairo = "0.0.4"
cairo-rs = "0.17.0"
cairo-sys-rs = "0.17.0"
gdk-pixbuf-sys = "0.17.0"
gdk-sys = "0.17.0"
gio-sys = "0.17.4"
glib-sys = "0.17.4"
gobject-sys = "0.17.4"
gtk = "0.17.1"
pango = "0.17.4"
pango-sys = "0.17.0"
rust_src = "0.0.0"
